Defect/enhancement: Fixed spacing issue between 'Add List' label and it's new list icon on list drop down menu; Changed height of 'list' dropdown to ensure vertical scroll appears when needed

--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ nav ul {
 
 	/* Reduce space between stacked icons on NewList and words "New List" to be more consistent */
 	
-	nav ul li:hover ul a li:last-of-type span {
+	nav ul li ul a li:last-of-type span.newList.fa-stack {
 		width: 1.6rem;
 		margin-right: 1px;
 	}
@@ -679,9 +679,12 @@ nav ul li:hover ul li span.listTotal {
 
 .scroll-menu	{
    min-width: 180px;
-   max-height: 70vh;
-/*   overflow: auto;*/
-	overflow-y: scroll;
+   max-height: 85vh;
+/*	max-height: : calc(100vh - 20px);*/
+/*	 overflow: auto;*/
+   overflow: hidden;
+/*	overflow-y: scroll;*/
+	overflow-y: auto;
  }
 	/* Make taskSubM*/
 /*
